@@ -3,6 +3,7 @@ Version 2.00.26 -
   Improve clvmd error reporting during startup.
   Make clvmd cope with large gaps in node numbers IDs.
   Make clvmd initialisation cope better with debugging output.
+  clvmd -V now displays lvm version too.
   
 
 Version 2.00.25 - 29th September 2004
